--- a/research-statement-jro.tex
+++ b/research-statement-jro.tex
@@ -11,6 +11,12 @@
 \headsep = 0.1 in
 \topskip = 0 in
 \footskip = 0.5 in
+\addtolength{\oddsidemargin}{-0.15in}
+\addtolength{\evensidemargin}{-0.15in}
+\addtolength{\textwidth}{0.3in}
+\addtolength{\topmargin}{-0.1in}
+\addtolength{\footskip}{-0.15in}
+\addtolength{\textheight}{0.25in}
 \pagenumbering{arabic}
 \usepackage{setspace}
 \usepackage[usenames]{color}
