Rewording international section.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -116,8 +116,9 @@ their characteristics.
     %   Conservation genetics
 
 \section*{Current and Future Research}
-% Below, I include short and long-term plans for funding the research in my
-% lab, which, given my current position, is geared toward opportunities in the
+% Below, I summarize some of the on-going and developing projects in my lab,
+% including plans for funding my group's research.
+% Given my current position, these funding plans are geared toward sources in the
 % United States.
 % However, if I were fortunate enough to join the
 % I am confident that the research summarized below would
