Tweaking parts of research statement.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -79,12 +79,13 @@ models and computational approaches to interrogate questions that motivate us.
 Our full-likelihood model that efficiently uses information
 from genome-scale data was a step forward for biogeography.
 However,
-it is limited in two ways.
+it was limited in two ways.
 First,
 by focusing on pairs of populations, it ignores the possibility of patterns of
 co-divergences across the ancestral history shared among the populations.
 To overcome this limitation, my research group is currently working on fully
-phylogenetic approaches to testing for temporally clustered divergences.
+phylogenetic approaches to testing for temporally clustered
+divergences\footnote{\label{Oaks21phycoeval}\shortfullcite{Oaks2021phycoeval}\hspace{-0.8em}}.
 Second, it assumes the natural history of organisms does not affect how they
 diversify, which is why my group is developing process-based evolutionary
 models that allow diversification dynamics to vary among lineages depending on
@@ -133,17 +134,17 @@ diversify: \textit{we assume divergences across the tree of life are independent
 Violations of this assumption are likely common and span many areas of biology,
 including biogeography, gene-family evolution, epidemiology, and symbiont
 coevolution.
-Prior to our work, we
-lacked a statistical framework for testing the predictions of the
-diverse and interesting processes that violate this assumption.
+Prior to our work, we lacked a statistical framework for testing the
+predictions of the diverse and interesting processes of diversification that
+violate this assumption.
 With funding from the NSF
 (\href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=1656004&HistoricalAwards=false}{DEB 1656004})
 we created such a framework by generalizing the space of phylogenies that is
 explored during Bayesian phylogenetic inference,
 allowing us to approximate the probability
-of patterns predicted by processes that cause nonindependent divergences 
+of patterns predicted by processes that cause non-independent divergences 
 across the tree of
-life\footnote{\label{Oaks21phycoeval}\shortfullcite{Oaks2021phycoeval}\hspace{-0.8em}}.
+life\cref{Oaks21phycoeval}.
 % By exploring the full space of phylogenies, we can approximate the probability
 % of patterns predicted by processes that cause nonindependent divergences 
 % across the tree of life.
@@ -154,7 +155,7 @@ life\footnote{\label{Oaks21phycoeval}\shortfullcite{Oaks2021phycoeval}\hspace{-0
 When we applied our generalized phylogenetic approach to comparative genomic data
 from two genera of geckos from across the Philippine Islands, we found support
 for shared and multifurcating divergences over the past 4 million years,
-as predicted by repeated fragmentation of the islands by interglacial rises
+as predicted by the repeated fragmentation of the islands by interglacial rises
 in sea
 level\cref{Oaks21phycoeval}.
 Our findings confirmed the importance of looking beyond pairs of populations to
@@ -201,18 +202,20 @@ different \speciationrate and \burstrate parameters depending on the traits of
 the evolving lineages. 
 % To determine the set of trait-based models that best explain the data, we will
 % use Bayesian model averaging via reversible-jump Markov chain Monte Carlo.
-Additional funding for this work is included in my pending NSF CAREER
-proposal.
+% Additional funding for this work is included in my pending NSF CAREER
+% proposal.
+To support this work, I have a pending proposal submitted to the NSF DEB
+Systematics and Biodiversity Science Cluster.
 
 \subsubsection*{Estimating the impact of super-spreading events on \covid}
 Understanding the role of social gatherings in spreading infectious disease
 has important health implications for both humans and wildlife.
 Multiple transmissions of a pathogen at a large gathering leave distinct
 patterns of shared divergences in the phylogenetic history of the pathogen.
-Given data on sequences and the time samples are collected, our BDB method will
-enable us to estimate the rate of transmissions at social events (\ie, shared
-divergences; \burstrate) relative to the rate of individual transmissions
-(\speciationrate),
+Using viral sequences and the corresponding times samples were collected, our
+BDB method will enable us to estimate the rate of transmissions at social
+events (\ie, shared divergences; \burstrate) relative to the rate of individual
+transmissions (\speciationrate),
 providing a proxy for the relative importance of social gatherings
 in the spread of a pathogen.
 
@@ -230,8 +233,9 @@ strain-independent BDB models.
 To validate the applicability of the BDB model to epidemiology,
 we will determine whether it can identify shared divergences when applied to
 \sarscov datasets from epidemiologically validated super-spreading events.
-I am seeking funding for this work from the NSF as part of my pending CAREER
-proposal, and am working on a proposal for an R21 award from the NIH.
+% I am seeking funding for this work from the NSF as part of my pending CAREER
+% proposal, and am working on a proposal for an R21 award from the NIH.
+To fund this work, I am working on a proposal for an R21 award from the NIH.
 % Investigator Initiated Research in Computational Genomics and Data Science
 
 
@@ -290,7 +294,10 @@ habitat following its uplift.
 % shared divergences.
 If this explanation is correct, karst-adapted lineages should have higher rates
 of shared divergences (\burstrate) compared to geckos living in other habitats.
-Funding for this work is included in my pending NSF CAREER proposal.
+% Funding for this work is included in my pending NSF CAREER proposal.
+To support this work, I have a proposal pending at the NSF DEB.
+% My recent proposal to NSF DEB to support this work was not funded, but was
+% well-reviewed; I am currently preparing it for resubmission.
 
 % \subsubsection*{Integrating simulation-based research into prison STEM education}
 %             % Integrate coding-to-learn exercises into the evolution
@@ -382,8 +389,8 @@ A major learning objective of these computational exercises is to understand
 how microevolutionary processes give rise to macroevolutionary patterns of
 biological diversity.
 The coding exercises we are designing will culminate with a capstone activity
-toward the end of the course, when the students design evolutionary scenarios
-and write code to simulate genetic data under them.
+toward the end of the course, for which the students will design evolutionary
+scenarios and write code to simulate genetic data under them.
 Their
 % forward-time
 simulations will begin with a single ancestral species
@@ -416,8 +423,10 @@ cutting-edge research in computational biology will not only help
 teach them about evolutionary biology, but also the process of science.
 All of our students will be co-authors on the papers that present the results
 of these simulation-based analyses.
-I am currently seeking funding for this work as part of my pending NSF CAREER
-proposal.
+% I am currently seeking funding for this work as part of my pending NSF CAREER
+% proposal.
+I am currently seeking funding for this work as the broader impact component of
+my NSF proposals.
 % I am also working on similar approaches to incorporating computational biology
 % research into other undergraduate and graduate courses, and am confident these
 % activities can attract funding from programs at the NSF and NIH that emphasize
